--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/proj">Projects and Posters</a></li>
+        		
     		</ul>
 		</nav>
 		<div class="container">
@@ -21,7 +20,6 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:cvandivier@gmail.com">email</a></li>
-        		<li><a href="https://github.com/cvandivier">github.com/cvandivier</a></li>
 			</ul>
 		</footer>
 	</body>
