--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-        		<li><a href="/proj">Projects and Posters</a></li>
+        		<li><a href="/proj.html">Projects and Posters</a></li>
         		
     		</ul>
 		</nav>
