--- a/proj.html
+++ b/proj.html
@@ -4,6 +4,7 @@
 		<title>Connor Vandivier, Environmental Scientist</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<meta http-equiv="Refresh" content="7; url=https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html" />
 	</head>
 	<body>
 		<nav>
@@ -12,6 +13,7 @@
         		<li><a href="/proj.html">Projects and Posters</a></li>
     		</ul>
 		</nav>
+	<p><a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">GSA 2014 Abstract</a>.</p>
 		<footer>
     		<ul>
         		<li><a href="mailto:cvandivier@gmail.com">email</a></li>
