--- a/proj.html
+++ b/proj.html
@@ -13,9 +13,9 @@
         		<li><a href="/proj.html">Projects and Posters</a></li>
     		</ul>
 		</nav>
-		
+		<div class="blurb">
 	<p><a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">GSA 2014 Abstract</a></p>
-		
+		</div><!-- /.blurb -->
 		<footer>
     		<ul>
         		<li><a href="mailto:cvandivier@gmail.com">email</a></li>
