--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Connor Vandivier!</h1>
-				<p>I've made this website in order to share some extra information about myself and my projects.</p>
+				<p>I made this website in order to share some extra information about myself and my projects.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
