--- a/proj.html
+++ b/proj.html
@@ -13,9 +13,9 @@
         		<li><a href="/proj.html">Projects and Posters</a></li>
     		</ul>
 		</nav>
-		<p>
-	<p><a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">GSA 2014 Abstract</a></p>
-		</p>
+		<bnk>
+	        <a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">GSA 2014 Abstract</a>
+		</bnk>
 		<footer>
     		<ul>
         		<li><a href="mailto:cvandivier@gmail.com">email</a></li>
