--- a/proj.html
+++ b/proj.html
@@ -13,10 +13,12 @@
         		<li><a href="/proj.html">Projects and Posters</a></li>
     		</ul>
 		</nav>
+		<div class="container">
+    		<div class="blurb">
+				<p><a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">GSA 2014 Abstract</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
 		<footer>
-			<bnk>
-	<a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">GSA 2014 Abstract</a>
-	</bnk>	
     		<ul>
         		<li><a href="mailto:cvandivier@gmail.com">email</a></li>
 			</ul>
