--- a/proj.html
+++ b/proj.html
@@ -15,7 +15,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-				<p><a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">GSA 2014 Abstract</a></p>
+				<p href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">GSA 2014 Abstract</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
