--- a/proj.html
+++ b/proj.html
@@ -15,7 +15,7 @@
 		<div class="container">
     		<div class="blurb">
 			<a href="https://commons.emich.edu/ugsymprg/28/">2014 Eastern Michigan University Undergraduate Symposium Abstract</a>
-			<a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">Geological Society of America 2014 Abstract</a>
+			<a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">2014 Geological Society of America Meeting Abstract</a>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
