--- a/proj.html
+++ b/proj.html
@@ -16,7 +16,7 @@
     		<div class="blurb">
 			<a href="https://commons.emich.edu/ugsymprg/28/">2014 Eastern Michigan University Undergraduate Symposium Abstract</a>
 			<br>
-			<li><a href="/pdf/VandivierUGSymposiumPoster.pdf"></li>
+			<li><a href="/pdf/VandivierUGSymposiumPoster.pdf"></a></li>
 			<a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">2014 Geological Society of America Meeting Abstract</a>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
