--- a/proj.html
+++ b/proj.html
@@ -18,7 +18,9 @@
 			<br>
 			<li><a href="/pdf/VandivierUGSymposiumPoster.pdf">Poster</a></li>
 			<a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">2014 Geological Society of America Meeting Abstract</a>
-    		</div><!-- /.blurb -->
+			<br>
+			<li><a href="/pdf/VandivierGSAPoster.pdf">Poster</a></li>
+			</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
