--- a/proj.html
+++ b/proj.html
@@ -17,7 +17,8 @@
 			<a href="https://commons.emich.edu/ugsymprg/28/">2014 Eastern Michigan University Undergraduate Symposium Abstract</a>
 			<br>
 			<li><a href="/pdf/VandivierUGSymposiumPoster.pdf">Poster</a></li>
-			<a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">2014 Geological Society of America Meeting Abstract</a>
+			<br>
+			<li><a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">Abstract</a></li>
 			<br>
 			<li><a href="/pdf/VandivierGSAPoster.pdf">Poster</a></li>
 			</div><!-- /.blurb -->
