--- a/proj.html
+++ b/proj.html
@@ -17,10 +17,9 @@
 			<a href="https://commons.emich.edu/ugsymprg/28/">2014 Eastern Michigan University Undergraduate Symposium Abstract</a>
 			<br>
 			<li><a href="/pdf/VandivierUGSymposiumPoster.pdf">Poster</a></li>
-			<a>2014 Geological Society of America Meeting</a>
+			<p>2014 Geological Society of America Meeting</p>
 			<br>
 			<li><a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">Abstract</a></li>
-			<br>
 			<li><a href="/pdf/VandivierGSAPoster.pdf">Poster</a></li>
 			</div><!-- /.blurb -->
 		</div><!-- /.container -->
