--- a/proj.html
+++ b/proj.html
@@ -14,12 +14,13 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-			<p>2014 Eastern Michigan University Undergraduate Symposium Abstract</p>
+			<p>2014 Eastern Michigan University Undergraduate Symposium</p>
 			<li><a href="https://commons.emich.edu/ugsymprg/28/">Abstract</a></li>
 			<li><a href="/pdf/VandivierUGSymposiumPoster.pdf">Poster</a></li>
 			<p>2014 Geological Society of America Meeting</p>
 			<li><a href="https://gsa.confex.com/gsa/2014AM/webprogram/Paper250388.html">Abstract</a></li>
 			<li><a href="/pdf/VandivierGSAPoster.pdf">Poster</a></li>
+			<br>
 			</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
